log/build_2025-03-06_17-13-21/week3/stderr.log
  File "/home/kisangpark/lab_training/install/week3/lib/python3.10/site-packages/week3/RRT_star_2.py", line 284
    except:
    ^^^^^^
SyntaxError: invalid syntax

